tests/rosetta/out/Dart/amicable-pairs.error
run error: exit status 254
../../tests/rosetta/out/Dart/amicable-pairs.dart:45:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/amicable-pairs.dart:22:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/amicable-pairs.dart:5:39: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
  while (p.toString().compareTo(i / 2.toString()) <= 0) {
                                      ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:5:35: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  while (p.toString().compareTo(i / 2.toString()) <= 0) {
                                  ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:7:26: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      sum = (sum as num) + (p as num);
                         ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:9:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    p = (p as num) + 1;
                   ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:27:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:32:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:41:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:46:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/amicable-pairs.dart:70:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/amicable-pairs.dart:99:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/amicable-pairs.dart:104:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/amicable-pairs.dart:108:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
